# april_gazebo_plugins

./: README.md
ariac_example/script/: ariac_example_node.py  tf2_example.py
ariac_example/src/ariac_example/: ariac_example.py
conveyor_belt_sim/: CMakeLists.txt  package.xml
conveyor_belt_sim/include/: ConveyorBeltPlugin.hh  ROSConveyorBeltPlugin.hh
conveyor_belt_sim/launch/: conveyor_spawn.launch  dual_conveyor.launch  only_conveyor.launch  single_conveyor.launch
conveyor_belt_sim/models/conveyor_belt/: gen_sdf  model.sdf  model.sdf.xacro  model_a.sdf
conveyor_belt_sim/models/conveyor_belt/conveyor_a/: model.config
conveyor_belt_sim/models/conveyor_belt/conveyor_b/: model.config
conveyor_belt_sim/models/conveyor_belt/conveyor_belt_a/: conveyor_belt_a.sdf  model.config
conveyor_belt_sim/models/conveyor_belt/conveyor_belt_b/: conveyor_belt_b.sdf  model.config
conveyor_belt_sim/models/conveyor_belt/meshes/: conveyor.dae
conveyor_belt_sim/models/conveyor_belt_ariac/: model.sdf
conveyor_belt_sim/src/: ConveyorBeltPlugin.cc  ROSConveyorBeltPlugin.cc
gazebo_ros_vel/: CMakeLists.txt  package.xml
gazebo_ros_vel/include/: gazebo_ros_vel.h
gazebo_ros_vel/src/: gazebo_ros_vel.cpp
gazebo_ros_vel/urdf/: box.urdf.xacro
get_set_camera_pose/: CMakeLists.txt  README.md  package.xml
get_set_camera_pose/launch/: gzclient.launch
get_set_camera_pose/src/: get_set_camera_pose.cpp
led_indicator/: CMakeLists.txt  package.xml
led_indicator/include/: FlashLightPlugin.hh  LedPluginM.hh
led_indicator/launch/: single_light_example.launch
led_indicator/models/led_indicator/: model.config  model.sdf
led_indicator/src/: FlashLightPlugin.cc  LedPluginM.cc
osrf_gear/: CMakeLists.txt  package.xml
osrf_gear/launch/: only_conveyor.launch
osrf_gear/models/conveyor_belt_ariac/: model.sdf
osrf_gear/script/: gazebo_unpauser.py  gear.py
osrf_gear/src/: ROSConveyorBeltPlugin.cc
