<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_vel</name>
  <version>0.0.1</version>
  <description>
    Plugin to exert a velocity on a link
  </description>

  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <license>BSD</license>

  <author email="oscar.lima@dfki.de">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_dev</exec_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
