<?xml version="1.0"?>
<package format="2">
  <name>led_indicator</name>
  <version>3.0.7</version>
  <description>
    A slightly modified version of LED plugin (https://github.com/osrf/gazebo/tree/gazebo11/plugins)
    that subscribes to a topic and sets a light to different colors (green, yellow, red)
  </description>

  <author email="oscar.lima@dfki.de">Oscar Lima</author>
  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <license>Apache 2.0</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
